samples/_failures_safe/1761182061_f10bfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_750cb7df.c: In function ‘main’:
./samples/SAFE/__tmp_750cb7df.c:171:18: error: ‘MAX_TOK’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  171 |     Token tokens[MAX_TOK
      |                  ^~~~~~~
      |                  MAX_TOKENS
./samples/SAFE/__tmp_750cb7df.c:171:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_750cb7df.c:171:25: error: expected ‘]’ at end of input
  171 |     Token tokens[MAX_TOK
      |                         ^
      |                         ]
./samples/SAFE/__tmp_750cb7df.c:171:5: error: expected declaration or statement at end of input
  171 |     Token tokens[MAX_TOK
      |     ^~~~~
